<resources>
    <string name="app_name">FamilyLocationTracker</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register">Register</string>
    <string name="otp_verification">Otp Verification</string>
    <string name="send_otp">Send OTP</string>
    <string name="number">Number</string>


    <string name="google_maps_api_key">
    AIzaSyAFK7yIIESWj7iBZmeScadozXkGHHWM4J8</string>
    <string name="opt_verification">OPT Verification</string>
    <string name="enter_the_otp_sent_to">Enter the Otp sent to</string>
    <string name="verify">Verify</string>
    <string name="example_number">+923073258880</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="get_current_location">Get current Location</string>
    <string name="setup_profile">Setup Profile</string>
    <string name="user_name">User Name</string>
    <string name="city">City</string>
    <string name="home">Home</string>
    <string name="map">Map</string>
    <string name="requests">Requests</string>
    <string name="profile">Profile</string>
    <string name="search_users">Search Users</string>
    <string name="user_profile">User Profile</string>
    <string name="search">Search</string>
    <string name="people_you_may_know">People You May Know</string>
    <string name="send_request">Send Request</string>
    <string name="accept_request">Accept Request</string>
    <string name="decline_request">Decline Request</string>
    <string name="request_sent">Request Sent</string>
    <string name="cancel_request">Cancel Request</string>
    <string name="contact">Contact</string>
    <string name="logout">Logout</string>
    <string name="you_are_friends">You Are Friends</string>
    <string name="friends_and_family">Friends And Family</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="gps">GPS</string>
    <string name="allow">Allow</string>
    <string name="location_permissions">Location Permissions</string>
    <string name="proceed">Proceed</string>
    <string name="unfriend">Unfriend</string>
    <string name="message">Message</string>
    <string name="call">Call</string>
    <string name="friend">Friend"'"s Profile</string>
    <string name="my_profile">My Profile</string>
    <string name="track_current_location">Track Current Location</string>
    <string name="last_location">Last Location</string>


</resources>