<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/base_app_nav"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.familyLocationTracker.views.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_homeFragment_to_searchUsersFragment"
            app:destination="@id/searchUsersFragment" />
        <action
            android:id="@+id/action_homeFragment_to_addedFriendsProfileFragment"
            app:destination="@id/addedFriendsProfileFragment" />
    </fragment>
    <fragment
        android:id="@+id/familyMapFragment"
        android:name="com.example.familyLocationTracker.views.map.FamilyMapFragment"
        android:label="@string/map"
        tools:layout="@layout/fragment_family_map" />
    <fragment
        android:id="@+id/friendRequestsFragment"
        android:name="com.example.familyLocationTracker.views.friendRequests.FriendRequestsFragment"
        android:label="@string/requests"
        tools:layout="@layout/fragment_friend_requests" />
    <fragment
        android:id="@+id/searchUsersFragment"
        android:name="com.example.familyLocationTracker.views.searchUsers.SearchUsersFragment"
        android:label="@string/search_users"
        tools:layout="@layout/fragment_search_users" >
        <action
            android:id="@+id/action_searchUsersFragment_to_userProfileFragment"
            app:destination="@id/userProfileFragment" />
    </fragment>
    <fragment
        android:id="@+id/userProfileFragment"
        android:name="com.example.familyLocationTracker.views.otherUserProfile.UserProfileFragment"
        android:label="@string/user_profile"
        tools:layout="@layout/fragment_user_profile" />
    <fragment
        android:id="@+id/ownProfileFragment"
        android:name="com.example.familyLocationTracker.views.profile.OwnProfileFragment"
        android:label="@string/my_profile"
        tools:layout="@layout/fragment_own_profile" />
    <fragment
        android:id="@+id/addedFriendsProfileFragment"
        android:name="com.example.familyLocationTracker.views.addedFriendsProfile.AddedFriendsProfileFragment"
        android:label="@string/friend"
        tools:layout="@layout/fragment_added_friends_profile" >
        <action
            android:id="@+id/action_addedFriendsProfileFragment_to_homeFragment"
            app:destination="@id/homeFragment"
            app:popUpTo="@id/base_app_nav"
            app:popUpToInclusive="true"
            app:launchSingleTop="true"
            />
    </fragment>
</navigation>