<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".features.setupProfile.SetupProfileFragment"
    android:orientation="vertical"
    >

    <com.google.android.material.card.MaterialCardView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        app:cardCornerRadius="50dp"
        app:strokeColor="@color/colorPrimary"
        app:strokeWidth="1dp"
        android:layout_marginTop="8dp"
       >
        <ImageView
            android:id="@+id/setupProfileFragmentImageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/ic_baseline_person_pin_24"
            app:tint="@color/colorPrimary" />
    </com.google.android.material.card.MaterialCardView>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="8dp"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fragmentSetupProfileNameEditText"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:singleLine="false"
            />
    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/number"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="8dp"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fragmentSetupProfileNumberEditText"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:singleLine="false"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/fragmentSetupProfileGetCurrentLocationButton"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="@string/get_current_location"
        android:textAllCaps="false"
        android:background="@drawable/button_bg"
        android:textColor="@color/white"
        android:layout_marginTop="8dp"
        android:layout_marginStart="24dp"
        />

    <LinearLayout
        android:id="@+id/fragmentSetupProfileLocationLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        >
        <com.google.android.gms.maps.MapView
            android:id="@+id/fragmentSetupProfileMapView"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:layout_marginStart="24dp"
            android:id="@+id/fragmentSetupProfileAddressTextView"

            />

    </LinearLayout>



</LinearLayout>